update about and api
